--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Certificate Generator</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body style="text-align: center; margin-top: 100px;">
+<!-- <body style="text-align: center; margin-top: 100px;">
     <h1>🎓 সার্টিফিকেট তৈরি করুন</h1>
     <form method="POST">
         <input type="text" name="name" placeholder="আপনার নাম লিখুন" required
@@ -14,6 +18,40 @@
         <br><br>
         <button type="submit" style="padding: 10px 30px; font-size: 18px;">ডাউনলোড করুন</button>
     </form>
-</body>
+</body> -->
+<style>
+    body {
+        font-family: 'Hind Siliguri', sans-serif;
+    }
+</style>
 
+<body class="font-Hind Siliguri bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen flex items-center justify-center">
+
+    <div class="bg-white shadow-lg rounded-xl p-10 max-w-md w-full">
+        <h1 class="text-2xl font-bold text-center text-indigo-700 mb-6">
+            সার্টিফিকেট জেনারেটর
+        </h1>
+
+        <form method="POST" class="space-y-5">
+            <div>
+                <label for="name" class="block text-sm font-medium text-gray-700 mb-1">আপনার নাম</label>
+                <input type="text" name="name" id="name" required
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-400 focus:border-indigo-400 transition"
+                    placeholder="Ex: Mushfikur Rahman">
+                    <br>
+                <small class="text-xs text-gray-500">আপনার নাম ইংরেজিতে লিখুন</small>
+            </div>
+
+            <button type="submit"
+                class="w-full py-2 px-4 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg shadow-md transition duration-300">
+                সার্টিফিকেট তৈরি করুন
+            </button>
+        </form>
+
+        <p class="text-center text-xs text-gray-400 mt-6">
+            Build By: <a target="_blank" href="http://fb.me/mushfikur.a.k">Mushfikur Rahman</a>
+        </p>
+    </div>
+
+    </body>
 </html>
